--- a/plugin.xml
+++ b/plugin.xml
@@ -13,6 +13,7 @@
         <config-file target="config.xml" parent="/*">
             <feature name="ExternalLinks">
                 <param name="ios-package" value="CDVExternalLinks"/>
+                <param name="onload" value="true" />
             </feature>
         </config-file>
         <header-file src="src/ios/CDVExternalLinks.h" />
